--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ hr {
   border: none;
   border-radius: 6px;
   cursor: pointer;
+  text-decoration: none;
 }
 .new-account:hover {
   background: #36a420;
@@ -145,3 +146,6 @@ hr {
     }  
 
 }
+
+
+  
